--- a/css/styles.css
+++ b/css/styles.css
@@ -474,11 +474,32 @@ header {
     display: flex;
 }
 
+.button-open {
+    display: flex;
+    border: 1px;
+    border-radius: 6px;
+    padding: 11px 34px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.9;
+    text-decoration: none;
+    text-align: center;
+    
+    color: #FFFFFF;
+    background-color: var(--accent-color); 
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .button {
     display: flex;
     border: 1px;
     border-radius: 6px;
     padding: 11px 34px;
+   
 
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
@@ -839,7 +860,7 @@ border-radius: 4px;
 
  /*Модалка*/
 
-.backdrop .is-hidden {
+.backdrop {
     
     position: fixed;
     top: 0px;
