--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ header {
     margin-right: auto;
 
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../img/Header\ img.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../img/Header.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -1097,7 +1097,6 @@ textarea {
     width: 14px;
     height: 12px;
     color: #FFFFFF;
-
 }
 
 .check-link {
